Improved for the presentation

--- a/examples/PyHEP/PyHEP.ipynb
+++ b/examples/PyHEP/PyHEP.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa65f5ce",
+   "id": "366a9e9d",
    "metadata": {},
    "source": [
     "You'll need to install a few things:\n",
@@ -21,6 +21,19 @@
     "pip install plotly\n",
     "pip install pandas\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60165756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To install things just run this cell.\n",
+    "%pip install git+https://github.com/SengerM/the_bureaucrat\n",
+    "%pip install plotly\n",
+    "%pip install pandas"
    ]
   },
   {
@@ -79,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feb2f8ba",
+   "id": "39be75ca",
    "metadata": {},
    "source": [
     "## Toy system to work with\n",
@@ -92,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62763b6",
+   "id": "7572d77e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bd63df",
+   "id": "6b76a683",
    "metadata": {},
    "source": [
     "The prototype of this toy function is \n",
@@ -137,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01ddb9f4",
+   "id": "4424ab2b",
    "metadata": {},
    "source": [
     "The previous cell created a `RunBureaucrat` within Python but nothing else was done, no directory was created."
@@ -156,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27547e2a",
+   "id": "6e692807",
    "metadata": {},
    "source": [
     "A *run directory* was created. We know it is a *run directory* because there is a file `bureaucrat_run_info.txt`.\n",
@@ -167,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53d2dc31",
+   "id": "331e2fbb",
    "metadata": {
     "scrolled": false
    },
@@ -189,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8093cfe4",
+   "id": "1863a048",
    "metadata": {},
    "source": [
     "In the previous cell:\n",
@@ -203,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e15d2723",
+   "id": "50443339",
    "metadata": {},
    "source": [
     "Let's now plot this data, with a new task:"
@@ -212,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8fe208",
+   "id": "31ab5918",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1926dec1",
+   "id": "fef51d2b",
    "metadata": {},
    "source": [
     "Note how paths to files are specified: **We always ask to the respective bureaucrat for the path to somewhere** and we only add the last part."
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e013cf35",
+   "id": "b238f8bb",
    "metadata": {},
    "source": [
     "## What happens if there is an error during a task?\n",
@@ -247,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a3c514c",
+   "id": "d0a176cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8db5b0",
+   "id": "7b02035d",
    "metadata": {},
    "source": [
     "# Deeper example\n",
@@ -267,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72a5e865",
+   "id": "fa439ac6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9eff3de",
+   "id": "76200278",
    "metadata": {},
    "source": [
     "I have defined two functions\n",
@@ -311,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5efb62ca",
+   "id": "0a3abb92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,12 +335,13 @@
     "    As = [0,1,2,3],\n",
     "    B = .8,\n",
     "    n_measurements = 99,\n",
-    ")"
+    ")\n",
+    "print(f'Find the results in {Matthias.path_to_directory_of_task(\"measure_sweeping_A\")}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "624a1b49",
+   "id": "4e91580b",
    "metadata": {},
    "source": [
     "Now let's process (well, actually just plot) the data exploiting the tree structure."
@@ -336,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c78a4d",
+   "id": "639aaf67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec3dd50",
+   "id": "426825ea",
    "metadata": {},
    "source": [
     "Note how each function just receives a `RunBureaucrat` and it has everything it needs to do its job."
@@ -374,17 +388,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e8c7b5",
+   "id": "cc63bdca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_sweeping_A(Matthias)"
+    "plot_sweeping_A(Matthias)\n",
+    "print(f'Find the results in {Matthias.path_to_directory_of_task(\"plot_sweeping_A\")}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6032767",
+   "id": "f643ff6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "337db22c",
+   "id": "0df8e934",
    "metadata": {},
    "source": [
     "## Yet more complexity, trivially\n",
@@ -404,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfd344e9",
+   "id": "fc28f1e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95c71563",
+   "id": "362a7507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,23 +475,25 @@
     "    As = [0,1,2,3],\n",
     "    Bs = [0,.8,1],\n",
     "    n_measurements = 99,\n",
-    ")"
+    ")\n",
+    "print(f'Find the results in {Matthias.path_to_directory_of_task(\"measure_sweeping_A_and_B\")}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6aad357",
+   "id": "3f482864",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_sweeping_A_and_B(Matthias)"
+    "plot_sweeping_A_and_B(Matthias)\n",
+    "print(f'Find the results in {Matthias.path_to_directory_of_task(\"plot_sweeping_A_and_B\")}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2133e34d",
+   "id": "751b8241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54a13c2",
+   "id": "a776bdcb",
    "metadata": {},
    "source": [
     "# Other features"
@@ -493,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6980f29",
+   "id": "35670595",
    "metadata": {},
    "source": [
     "## Warnings when weird characters are found\n",
@@ -504,25 +521,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab0e05cc",
+   "id": "a319cb4f",
    "metadata": {},
    "outputs": [],
    "source": [
     "Ludwig = RunBureaucrat(STORE_DATA_HERE_PATH/'I have spaces and also + and ? and *')\n",
-    "Ludwig.create_run()"
+    "Ludwig.create_run()\n",
+    "print(f'Run was created in {Ludwig.path_to_run_directory}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45ea0745",
+   "id": "9c8f5f8a",
    "metadata": {},
    "source": [
-    "The run was created because I am in Linux now, but in Windows it will for shure have problems with `*`. So Ludwig is warning us."
+    "In Windows it will for shure have problems with `*`. So Ludwig is warning us."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "71fb3d79",
+   "id": "d8cafd08",
    "metadata": {},
    "source": [
     "## Automatic script backups\n",
@@ -540,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c005adf8",
+   "id": "d9524a8e",
    "metadata": {},
    "source": [
     "## Automatic deletion of old data\n",
@@ -557,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "250bf931",
+   "id": "79e082c3",
    "metadata": {},
    "source": [
     "# Conclusions\n",
@@ -571,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db101c71",
+   "id": "8fc3ab7c",
    "metadata": {},
    "outputs": [],
    "source": [
