Few changes to the presentation

--- a/examples/PyHEP/PyHEP.ipynb
+++ b/examples/PyHEP/PyHEP.ipynb
@@ -12,15 +12,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366a9e9d",
+   "id": "3ed20e0e",
    "metadata": {},
    "source": [
-    "You'll need to install a few things:\n",
-    "```\n",
-    "pip install git+https://github.com/SengerM/the_bureaucrat\n",
-    "pip install plotly\n",
-    "pip install pandas\n",
-    "```"
+    "# Introduction\n",
+    "\n",
+    "## What this package wants to solve?\n",
+    "\n",
+    "- Storing our files in a well structured way, automatically and easily.\n",
+    "- Provide an automated way to check if some activity (a *task*) was carried on successfully or not.\n",
+    "\n",
+    "## How it aims to do it?\n",
+    "\n",
+    "*Making you forget about the problem*, you forget about directories and think instead in *runs* and *tasks*.\n",
+    "\n",
+    "**Let's look at this with some examples...**"
    ]
   },
   {
@@ -70,34 +76,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ed20e0e",
-   "metadata": {},
-   "source": [
-    "# Introduction\n",
-    "\n",
-    "- This package was designed with a tree-like structure in mind.\n",
-    "- Defines two kinds of objects:\n",
-    "  1. **Run**: Each node of the tree.\n",
-    "  2. **Task**: Things that you do within each run.\n",
-    "    - Tasks can have *sub-runs*, here arises the tree structure.\n",
-    "- These objects end up being just directories in the file system in the end.\n",
-    "- In the code\n",
-    "  - **Run**s are handled by `RunBureaucrat` objects.\n",
-    "  - **Task**s are handled by `TaskBureaucrat` objects.\n",
-    "\n",
-    "In an image:\n",
-    "\n",
-    "<img src=\"img/diagram.svg\" align=\"left\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "39be75ca",
    "metadata": {},
    "source": [
     "## Toy system to work with\n",
     "\n",
-    "Let's consider a toy example with a black box that has two inputs and one output:\n",
+    "Let's consider a toy example with a black box that has two inputs and one output. We want to measure the black box in different ways.\n",
     "\n",
     "<img src=\"img/black_box.svg\" align=\"left\">"
    ]
@@ -128,7 +112,7 @@
    "id": "4ec97085",
    "metadata": {},
    "source": [
-    "# Basic usage\n",
+    "# Basic usage of bureaucrats\n",
     "\n",
     "First, create a `RunBureaucrat`. It is very simple:\n",
     "```python\n",
@@ -188,8 +172,9 @@
    "source": [
     "A = 0\n",
     "B = 0\n",
+    "MEASURE_N_TIMES = 99\n",
     "with John.handle_task('measure_with_constant_A_and_B') as Johns_employee:\n",
-    "    measurements_result = [measure_black_box(A=A,B=A) for n in range(99)]\n",
+    "    measurements_result = [measure_black_box(A=A,B=A) for n in range(MEASURE_N_TIMES)]\n",
     "    \n",
     "    measurements_df = pandas.DataFrame({'black_box_output': measurements_result})\n",
     "    measurements_df['A'] = A\n",
@@ -578,8 +563,27 @@
    "id": "79e082c3",
    "metadata": {},
    "source": [
-    "# Conclusions\n",
+    "# Summary\n",
     "\n",
+    "- Defines two kinds of objects (not Python objects but concepts):\n",
+    "  1. **Run**: A collection of *tasks*.\n",
+    "  2. **Task**: Something that you do within a *run* (e.g. `measure`, `plot`, `calculate`...).\n",
+    "    - Tasks can have *sub-runs*, here arises the tree structure.\n",
+    "- These objects end up just being directories in the file system automatically created for you.\n",
+    "- Within Python\n",
+    "  - **Run**s are handled by `RunBureaucrat` objects.\n",
+    "  - **Task**s are handled by `TaskBureaucrat` objects.\n",
+    "\n",
+    "In an image:\n",
+    "\n",
+    "<img src=\"img/diagram.svg\" align=\"left\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0018634f",
+   "metadata": {},
+   "source": [
     "- [The Bureaucrat](https://github.com/SengerM/the_bureaucrat) provides a *pure Python* and cross platform mechanism to accomodate data and results in a tree-like structure.\n",
     "- Very flexible: It just creates a directory structure in the file system; you can then store whatever you want (automatically or manually), copy-paste parts of the tree, share, etc.\n",
     "- The underlying directory structure is encoded into *Task*s that are done within *Run*s.\n",
